# simple-chat-ddn

./: .clippy.toml  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: chat-test.yml
chat-client/: Cargo.toml
chat-client/src/: client.rs  lib.rs  main.rs  message_handler.rs  username_handler.rs
chat-client/tests/: integration_client.rs
chat-core/: Cargo.toml
chat-core/src/: error.rs  lib.rs  message_cahce.rs  protocol.rs  transport_layer.rs  utils.rs
chat-core/tests/: integration_protocol.rs
chat-server/: Cargo.toml
chat-server/src/: broadcast.rs  broadcast_pool.rs  client_handler.rs  lib.rs  main.rs  server.rs
chat-server/tests/: integration_server_client.rs
developer-tools/git/hooks/: commit-msg  pre-commit
developer-tools/git/template/: .gitmessage
