[workspace]
resolver = "3"
members = ["chat-core"]
default-members = ["chat-core"]
exclude = ["developer-tools"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
bincode = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1" }
dashmap = "5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"

# Testing and benchmarking
criterion = "0.7"
tokio-test = "0.4"

# Development tools
once_cell = "1.0"
