[package]
name = "chat-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bytes = {workspace = true}
thiserror = { workspace = true }
bincode = { workspace = true}
serde = { workspace = true }
tracing = {workspace = true}
