[package]
name = "chat-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chat-core = { path = "../chat-core" }
dashmap = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
